--- a/Event_tracker_1.ipynb
+++ b/Event_tracker_1.ipynb
@@ -6,7 +6,7 @@
       "name": "Event_tracker_1.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOoG4TY4cdeMxQX1onNyzOV",
+      "authorship_tag": "ABX9TyOTly47zV80rOGDP9e45VjU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,10 +30,10 @@
       "metadata": {
         "id": "W79AgbEGTjGo",
         "colab_type": "code",
-        "outputId": "16395573-9f41-4a76-809f-1f7e769b3a02",
+        "outputId": "3be2c2b1-728a-443d-edfd-663abc4e9a34",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 122
+          "height": 34
         }
       },
       "source": [
@@ -44,16 +44,12 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 1,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Go to this URL in a browser: https://accounts.google.com/o/oauth2/auth?client_id=947318989803-6bn6qk8qdgf4n4g3pfee6491hc0brc4i.apps.googleusercontent.com&redirect_uri=urn%3aietf%3awg%3aoauth%3a2.0%3aoob&response_type=code&scope=email%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdocs.test%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdrive%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdrive.photos.readonly%20https%3a%2f%2fwww.googleapis.com%2fauth%2fpeopleapi.readonly\n",
-            "\n",
-            "Enter your authorization code:\n",
-            "··········\n",
-            "Mounted at /content/drive\n"
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
           ],
           "name": "stdout"
         }
@@ -64,16 +60,16 @@
       "metadata": {
         "id": "1ZoZxNBST0yr",
         "colab_type": "code",
-        "outputId": "cd27fa74-f769-4484-811e-11fca8e5bd64",
+        "outputId": "3f3c2618-c33b-415e-8566-86286bcd4e78",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 119
+          "height": 121
         }
       },
       "source": [
         "!pip install pyti"
       ],
-      "execution_count": 0,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "stream",
@@ -94,7 +90,7 @@
       "metadata": {
         "id": "ArGHvKvoT33m",
         "colab_type": "code",
-        "outputId": "b657def9-8dd4-4698-b425-75990a01ca18",
+        "outputId": "f1d4cf6b-d107-4d3c-c6a2-8a3a82424bdf",
         "colab": {
           "resources": {
             "http://localhost:8080/nbextensions/google.colab/files.js": {
@@ -111,7 +107,7 @@
             }
           },
           "base_uri": "https://localhost:8080/",
-          "height": 74
+          "height": 75
         }
       },
       "source": [
@@ -119,15 +115,15 @@
         "from google.colab import files\n",
         "uploaded = files.upload()"
       ],
-      "execution_count": 3,
+      "execution_count": 36,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
             "text/html": [
               "\n",
-              "     <input type=\"file\" id=\"files-40f4c81a-6c30-4a57-8fa1-bb7240945b20\" name=\"files[]\" multiple disabled />\n",
-              "     <output id=\"result-40f4c81a-6c30-4a57-8fa1-bb7240945b20\">\n",
+              "     <input type=\"file\" id=\"files-82341eb5-d214-4286-84ce-6ea709ebb4c8\" name=\"files[]\" multiple disabled />\n",
+              "     <output id=\"result-82341eb5-d214-4286-84ce-6ea709ebb4c8\">\n",
               "      Upload widget is only available when the cell has been executed in the\n",
               "      current browser session. Please rerun this cell to enable.\n",
               "      </output>\n",
@@ -144,7 +140,7 @@
         {
           "output_type": "stream",
           "text": [
-            "Saving data_new.xlsx to data_new (1).xlsx\n"
+            "Saving data_second.xlsx to data_second (2).xlsx\n"
           ],
           "name": "stdout"
         }
@@ -187,20 +183,20 @@
       "metadata": {
         "id": "lwzB4VgUFHTB",
         "colab_type": "code",
-        "outputId": "4fdfcc6b-2bb1-4cfa-b4fc-36a711181b66",
+        "outputId": "812fa97c-646d-4ac5-d148-e32cf41e576b",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 204
+          "height": 197
         }
       },
       "source": [
         "import io\n",
-        "df = pd.read_excel(io.BytesIO(uploaded['data_new.xlsx']))\n",
+        "df = pd.read_excel(io.BytesIO(uploaded['data_second.xlsx']))\n",
         "# Dataset is now stored in a Pandas Dataframe\n",
         "#print the head\n",
         "df.head()"
       ],
-      "execution_count": 4,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -236,71 +232,71 @@
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>0</th>\n",
-              "      <td>2018-02-14 08:01:00</td>\n",
-              "      <td>477.05</td>\n",
-              "      <td>476.25</td>\n",
-              "      <td>477.05</td>\n",
-              "      <td>476.25</td>\n",
-              "      <td>8042873</td>\n",
-              "      <td>16879</td>\n",
+              "      <td>2018-02-14 08:00:00</td>\n",
+              "      <td>1682.0</td>\n",
+              "      <td>1679.8</td>\n",
+              "      <td>1682.0</td>\n",
+              "      <td>1677.6</td>\n",
+              "      <td>36935376.0</td>\n",
+              "      <td>21978</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
-              "      <td>2018-02-14 08:02:00</td>\n",
-              "      <td>476.05</td>\n",
-              "      <td>475.00</td>\n",
-              "      <td>476.05</td>\n",
-              "      <td>475.00</td>\n",
-              "      <td>20259088</td>\n",
-              "      <td>42595</td>\n",
+              "      <td>2018-02-14 08:01:00</td>\n",
+              "      <td>1679.8</td>\n",
+              "      <td>1680.8</td>\n",
+              "      <td>1681.6</td>\n",
+              "      <td>1678.0</td>\n",
+              "      <td>28434078.0</td>\n",
+              "      <td>16930</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
-              "      <td>2018-02-14 08:03:00</td>\n",
-              "      <td>475.10</td>\n",
-              "      <td>474.90</td>\n",
-              "      <td>475.70</td>\n",
-              "      <td>474.90</td>\n",
-              "      <td>24033822</td>\n",
-              "      <td>50556</td>\n",
+              "      <td>2018-02-14 08:02:00</td>\n",
+              "      <td>1681.2</td>\n",
+              "      <td>1679.0</td>\n",
+              "      <td>1681.2</td>\n",
+              "      <td>1678.0</td>\n",
+              "      <td>24295556.0</td>\n",
+              "      <td>14466</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
-              "      <td>2018-02-14 08:04:00</td>\n",
-              "      <td>475.20</td>\n",
-              "      <td>476.30</td>\n",
-              "      <td>476.30</td>\n",
-              "      <td>475.15</td>\n",
-              "      <td>17590340</td>\n",
-              "      <td>36995</td>\n",
+              "      <td>2018-02-14 08:03:00</td>\n",
+              "      <td>1679.0</td>\n",
+              "      <td>1675.6</td>\n",
+              "      <td>1679.8</td>\n",
+              "      <td>1675.4</td>\n",
+              "      <td>19602172.0</td>\n",
+              "      <td>11683</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
-              "      <td>2018-02-14 08:05:00</td>\n",
-              "      <td>476.55</td>\n",
-              "      <td>475.15</td>\n",
-              "      <td>476.55</td>\n",
-              "      <td>475.15</td>\n",
-              "      <td>30133234</td>\n",
-              "      <td>63326</td>\n",
+              "      <td>2018-02-14 08:04:00</td>\n",
+              "      <td>1674.6</td>\n",
+              "      <td>1676.4</td>\n",
+              "      <td>1677.4</td>\n",
+              "      <td>1674.6</td>\n",
+              "      <td>10772108.0</td>\n",
+              "      <td>6427</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>"
             ],
             "text/plain": [
-              "                Dates    Open   Close    High     Low     Value  Volume\n",
-              "0 2018-02-14 08:01:00  477.05  476.25  477.05  476.25   8042873   16879\n",
-              "1 2018-02-14 08:02:00  476.05  475.00  476.05  475.00  20259088   42595\n",
-              "2 2018-02-14 08:03:00  475.10  474.90  475.70  474.90  24033822   50556\n",
-              "3 2018-02-14 08:04:00  475.20  476.30  476.30  475.15  17590340   36995\n",
-              "4 2018-02-14 08:05:00  476.55  475.15  476.55  475.15  30133234   63326"
+              "                Dates    Open   Close    High     Low       Value  Volume\n",
+              "0 2018-02-14 08:00:00  1682.0  1679.8  1682.0  1677.6  36935376.0   21978\n",
+              "1 2018-02-14 08:01:00  1679.8  1680.8  1681.6  1678.0  28434078.0   16930\n",
+              "2 2018-02-14 08:02:00  1681.2  1679.0  1681.2  1678.0  24295556.0   14466\n",
+              "3 2018-02-14 08:03:00  1679.0  1675.6  1679.8  1675.4  19602172.0   11683\n",
+              "4 2018-02-14 08:04:00  1674.6  1676.4  1677.4  1674.6  10772108.0    6427"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 4
+          "execution_count": 37
         }
       ]
     },
@@ -326,6 +322,60 @@
       "source": [
         "The profit or loss calculation is usually determined by the closing price of a stock for the day, hence we will consider the closing price as the target variable. Let’s plot the target variable to understand how it’s shaping up in our data:"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Qlv9CMfZVpNv",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 312
+        },
+        "outputId": "d42c0138-280c-47db-9a3e-64474e4d1da9"
+      },
+      "source": [
+        "!ls \"/content/drive/My Drive/Colab Notebooks\""
+      ],
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            " arima_analysys.py\t\t  __pycache__\n",
+            " conver_xlsx.py\t\t\t  sample_event.py\n",
+            "'Copy of Copy of 01. SVM.ipynb'   sample.py\n",
+            "'Copy of ET-ML.ipynb'\t\t  sensitivity_analysis_api.py\n",
+            "'Copy of Event_tracker_1.ipynb'   sensitivity_analysis_basic.py\n",
+            "'Copy of Untitled6.ipynb'\t  sensitivity_analysis_multi.py\n",
+            " data_second.xlsx\t\t  sensitivity_analysis.py\n",
+            " deep_learning_model.py\t\t  sensitivity_analysis_threshold.py\n",
+            " et.py\t\t\t\t  sobel.py\n",
+            " Event_tracker_2.ipynb\t\t  Sobol_G.txt\n",
+            " event_tracker_v1.py\t\t  support_vector_regression.py\n",
+            " graphs\t\t\t\t  technical_indicator_data.py\n",
+            " HFT_Event_Tracker\t\t  technical_indicator_matrix.py\n",
+            " keras_reg.py\t\t\t  technical_indicators_manual_calculation.py\n",
+            " morries.py\t\t\t  technical_indicators.py\n",
+            " Oxford-ML\t\t\t  Untitled\n",
+            " pearson.py\t\t\t  Untitled8.ipynb\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "WbE3u0vzX0Hd",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "!python3 \"/content/drive/My Drive/Colab Notebooks/sample_event.py\" data_second.xlsx"
+      ],
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -361,7 +411,7 @@
         "print('\\n Shape of the data:')\n",
         "print(df.shape)"
       ],
-      "execution_count": 5,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -412,7 +462,7 @@
       "source": [
         "print('There are {} number of days in the dataset.'.format(df.shape[0]))"
       ],
-      "execution_count": 6,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -455,7 +505,7 @@
         "print('\\n Shape of validation set:')\n",
         "print(valid.shape)"
       ],
-      "execution_count": 7,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -498,7 +548,7 @@
         "print('\\n RMSE value on validation set:')\n",
         "print(rms)"
       ],
-      "execution_count": 9,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -516,11 +566,11 @@
       "metadata": {
         "id": "xzBu7GWWXlrJ",
         "colab_type": "code",
+        "outputId": "85cbc991-56de-43a9-8e45-7274c913dcd1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 626
-        },
-        "outputId": "85cbc991-56de-43a9-8e45-7274c913dcd1"
+        }
       },
       "source": [
         "import warnings\n",
@@ -531,7 +581,7 @@
         "plt.plot(train['Close'])\n",
         "plt.plot(valid[['Close', 'Predictions']])"
       ],
-      "execution_count": 11,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
